Prevent single elements from overflowing meeting area

--- a/indico/web/client/styles/partials/_paddedboxes.scss
+++ b/indico/web/client/styles/partials/_paddedboxes.scss
@@ -10,6 +10,7 @@
   @include border-all($color: $pastel-gray, $width: 2px);
   background: $pastel-gray;
   display: table;
+  table-layout: fixed;
   width: 100%;
 
   &::before {
