--- a/indico/web/client/styles/themes/indico.scss
+++ b/indico/web/client/styles/themes/indico.scss
@@ -320,6 +320,7 @@ ul.day-list {
 .timetable-item-body {
   flex: auto;
   padding-bottom: 0.5rem;
+  overflow: hidden;
 
   /* Without the following IE11 doesn't correctly compute the width of the element. */
   width: 100%;
